# voice_command_agent

./: .gitignore  AGENT_DOCUMENTATION.md  Dockerfile  FEATURES.md  FINAL_COMPLETE_IMPLEMENTATION.md  READING_BOOK_PLAN.md  README.md  SCALING_CONCERNS.md  SYSTEM_ARCHITECTURE.md  agent.py  assistant.py  embedding_service.py  firebase_client.py  pinecone_client.py  pyproject.toml  requirements.txt  test_modular_system.py
agents/: backlog_agent.py  base_specialist_agent.py  books_agent.py  health_agent.py  image_agent.py  medication_agent.py  memory_agent.py  orchestrator_agent.py  settings_agent.py  story_agent.py
backlog/: backlog_manager.py  time_monitor.py
clients/: firebase_client.py  health_data_client.py  memory_client.py  pinecone_client.py  story_client.py
helpers/: assistant_data_handler.py  assistant_lifecycle.py  client_time_tracker.py  conversation_tracker.py  data_channel_handler.py  data_channel_sender.py  emotion_handler.py  extract_user_id.py  generate_presigned_url.py  intent_manager.py  tool_registry.py
intent_detection/: intent_detector.py  llm_intent_detector.py  module_definitions.py
models/: agent_prompts.py  intent_result.py  navigation_state.py  shared_state.py
prompt_management/: prompt_module_manager.py
prompt_modules/: ai_assistant.md  backlog.md  base.md  book_reading.md  face_recognition.md  form_handling.md  health_query.md  medication.md  medication_reminders.md  memory.md  memory_recall.md  navigation.md  reading_ocr.md  settings_fall_detection.md  settings_location.md  story.md  video_calling.md
services/: embedding_service.py  health_analytics.py
tests/: README.md  config.yaml  test_modular_system.py
tools/: __init__.py  base_tool.py  calculator.py  emergency_delay_tool.py  fall_detection_sensitivity_tool.py  form_orchestration_tool.py  form_submission_tool.py  form_validation_tool.py  health_query_tool.py  memory_tool.py  name_field_tool.py  (+19 more)
(+167 files in other folders)
