[project]
name = "livekit-voice-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "firebase-admin>=7.1.0",
    "langchain>=0.3.0,<1.0.0", # Stay on 0.3.x
    "langchain-openai>=0.2.0,<1.0.0", # Stay on 0.3.x
    "langchain-pinecone>=0.2.12", # Latest
    "langchain-core>=0.3.34,<1.0.0", # Compatible with pinecone
    "livekit-agents[cartesia,deepgram,openai,silero,turn-detector]>=1.2.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "livekit-plugins-openai>=0.7.0",
    "pinecone>=7.3.0",
    "pydantic>=2.11.9",
    "python-dotenv>=1.0.0",
    "pytz>=2025.2",
    "boto3>=1.34.0",
    "python-dateutil>=2.8.0",
    "livekit-plugins-silero>=0.6.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
]
